# swarm

./: .env  .gitignore  Cargo.toml  README.md
a2a_agent_backbone/: Cargo.toml
a2a_agent_backbone/src/: lib.rs
a2a_agent_backbone/src/a2a_agent_initialization/: a2a_agent_config.rs  mod.rs
a2a_agent_backbone/src/a2a_agent_logic/: config.rs  handler.rs  mod.rs  server.rs  simple_agent.rs
a2a_agent_backbone/src/a2a_agent_server/: agent_handler.rs  agent_server.rs
a2a_full_backbone/: Cargo.toml
a2a_full_backbone/src/: lib.rs
a2a_full_backbone/src/a2a_full_agent_logic/: full_agent.rs  mod.rs
a2a_full_backbone/src/a2a_full_server/: full_handler.rs  full_server.rs  mod.rs
a2a_full_backbone/src/a2a_plan/: plan_definition.rs  plan_execution.rs
a2a_planner_backbone/: Cargo.toml
a2a_planner_backbone/src/: lib.rs
a2a_planner_backbone/src/a2a_agent_logic/: mod.rs  planner_agent.rs
a2a_planner_backbone/src/a2a_plan/: plan_definition.rs  plan_execution.rs
a2a_planner_backbone/src/a2a_planner_server/: mod.rs  planner_handler.rs  planner_server.rs
a2a_protocol_backbone/: Cargo.toml
a2a_protocol_backbone/src/: lib.rs
a2a_protocol_backbone/src/a2a_agent_logic/: agent_logic.rs
a2a_protocol_backbone/src/a2a_agent_server/: agent_handler.rs  agent_server.rs  mod.rs
agent_core/: Cargo.toml
agent_core/src/: lib.rs
agent_core/src/agent_interaction_protocol/: a2a_agent_interaction.rs  agent_interaction.rs  mod.rs
agent_core/src/business_logic/: agent.rs  mod.rs  service_adapters.rs  services.rs
agent_core/src/execution/: execution_result.rs
agent_core/src/graph/: graph_definition.rs  mod.rs
agent_core/src/logging/: agent_logging_services.rs  logging_services.rs  mod.rs
agent_core/src/planning/: mod.rs  plan_definition.rs
agent_core/src/server/: agent_handler.rs  agent_server.rs
agent_evaluation_service/: .env.example  Cargo.toml
agent_evaluation_service/src/: lib.rs
agent_evaluation_service/src/evaluation_server/: judge_agent.rs  llm_judge.rs  mod.rs  server.rs
agent_evaluation_service/src/evaluation_service_client/: agent_evaluation_client.rs
agent_factory/: Cargo.toml  ReadMe.md
agent_factory/src/: agent_factory.rs
agent_protocol_backbone/: Cargo.toml
agent_protocol_backbone/src/: lib.rs
agent_protocol_backbone/src/business_logic/: agent.rs  generic_agent.rs  llm_client.rs  mod.rs  services.rs
agent_protocol_backbone/src/config/: agent_config.rs  mod.rs
agent_protocol_backbone/src/planning/: plan_definition.rs
agent_protocol_backbone/src/server/: agent_handler.rs  agent_server.rs
agent_workflow/: Cargo.toml
agent_workflow/src/: lib.rs
agent_workflow/src/business_logic/: mod.rs  workflow_agent.rs  workflow_registries.rs
bidirectional_agent_backbone/: Cargo.toml
bidirectional_agent_backbone/src/: main.rs
bidirectional_agent_backbone/src/a2a_agent_logic/: handler.rs  mod.rs  planner_agent.rs  server.rs  server_config.rs
bidirectional_agent_backbone/src/a2a_plan/: mod.rs  plan_definition.rs  plan_execution.rs
configuration/: Cargo.toml  agent_a2a_config.toml  agent_basic_config.toml  agent_executor_config.toml  agent_full_config.toml  agent_identity_config.toml  agent_judge_config.toml  agent_mcp_config.toml  agent_orchestration_config.toml  agent_planner_config.toml  agent_workflow_config.toml  agent_workflow_config_v2.toml  mcp_runtime_config.toml
configuration/prompts/: detailed_workflow_agent_prompt.txt  detailed_workflow_workflow_agent_prmpt.txt  orchestration_agent_prompt.txt  prompt_mcp_agent.txt  workflow_agent_prompt.txt  workflow_agent_prompt_improvement_todo.txt
configuration/prompts/old/: planner_agent_prompt.txt  prompt_creation_plan.txt
configuration/src/: lib.rs
examples/a2a_agent_endpoint/: Cargo.toml  ReadMe.md
examples/a2a_agent_endpoint/src/: a2a_agent_endpoint.rs
examples/mcp_runtime_endpoint/: Cargo.toml  ReadMe.md
examples/mcp_runtime_endpoint/src/: mcp_runtime_endpoint.rs
examples/mcp_server/: Cargo.toml  README.md
examples/mcp_server/src/: main-server.rs  oauth-main-server.rs
examples/oauth_mcp_server/: Cargo.toml
examples/oauth_mcp_server/src/: main-server.rs
executor_agent/: Cargo.toml
executor_agent/src/business_logic/: executor_agent.rs  mod.rs
mcp_agent_backbone/: Cargo.toml
mcp_agent_backbone/src/: lib.rs
mcp_agent_backbone/src/mcp_agent_logic/: agent.rs  process_response.rs
mcp_agent_backbone/src/mcp_client/: mcp_client.rs
mcp_agent_backbone/src/mcp_initialization/: mcp_agent_config.rs  mod.rs
mcp_agent_endpoint/: Cargo.toml
mcp_agent_endpoint/src/: main.rs
mcp_agent_endpoint/src/api/: endpoint.rs
mcp_runtime/: Cargo.toml
mcp_runtime/src/: lib.rs
mcp_runtime/src/mcp_agent_logic/: agent.rs  process_response.rs
mcp_runtime/src/mcp_client/: mcp_client.rs
mcp_runtime/src/mcp_runtime/: mcp_runtime.rs
mcp_runtime/src/runtime/: mcp_runtime.rs
orchestration_agent/: Cargo.toml
orchestration_agent/src/: lib.rs
orchestration_agent/src/business_logic/: mod.rs  orchestration_agent.rs  service_adapters.rs
orchestration_agent/src/config/: mod.rs  orchestration_agent_config.rs
orchestration_agent/src/plan/: mod.rs
planner_agent/: Cargo.toml
planner_agent/src/business_logic/: mod.rs  planner_agent.rs  planner_agent_old.rs  workflow_registry.rs
resource_invoker/: Cargo.toml
resource_invoker/src/: lib.rs
workflow_agent/: Cargo.toml  ReadMe.md
workflow_agent/src/: lib.rs
workflow_agent/src/business_logic/: mod.rs  service_adapters.rs  workflow_agent.rs  workflow_agent.rs_wip  workflow_invokers.rs  workflow_registries.rs  workflow_runners.rs
workflow_management/: Cargo.toml
workflow_management/example_workflow/: auto_generated.json  conditional_execution_example.json  example_workflow_tasks.json  m_a_w_distributed.json  mix_workflow.json  multi_agent_workflow.json  multi_agent_workflow_v2.json  sample_structure.txt
workflow_management/example_workflow/archive/: conditional_execution_example.json  mix_workflow.json  (+1 more)
workflow_management/json_schema/: workflow_json_schema_v2.json
workflow_management/src/: lib.rs
(+149 files in other folders)
