[workspace]
resolver = "3"

# Used while refactoring to add agent_protocol_backbone
members = [ "configuration","llm_api",
                "agent_discovery_service","agent_memory_service",
                "agent_evaluation_service",
                "agent_core",
                "basic_agent","mcp_runtime","orchestration_agent",
               "workflow_management",
                "examples/*"]

[workspace.dependencies]
llm_api = { path = "./llm_api" }
configuration = { path = "./configuration" }
agent_core = { path = "./agent_core" }
agent_evaluation_service = { path = "./agent_evaluation_service" }
agent_memory_service = { path = "./agent_memory_service" }
mcp_runtime = { path = "./mcp_runtime" }

agent_discovery_service = { path = "./agent_discovery_service" }

# For rmcp and a2a-rs, in the future, I have to pin a revision number because this crate is evolving rapidly with significant number of breaking changes
# Revision as of August the 8th 2025. Pinning specific release of rmcp and a2a-rs ensure stability of swarm
rmcp= { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["client","transport-sse-client", "transport-child-process","reqwest"] , rev="209dbac50f51737ad953c3a2c8e28f3619b6c277" }
a2a-rs= { git = "https://github.com/EmilLindfors/a2a-rs.git" , features=["server","http-server","client","http-client","tracing"] , rev="2cf954129de8b4cc3b3146780877e508fa34c00c" }


reqwest = { version = "0.12", features = ["json","rustls-tls"] }
rustls="0.23"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = { version = "0.1"}

serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
anyhow = "1.0"


thiserror = "2"
clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = "0.8"

jsonwebtoken = { version = "9.3" }
oauth2 = { version = "5" }
openidconnect = { version = "4" }

chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.9"
lazy_static = "1.4"  # Used for static request ID storage in message_handler
regex = "1.10"  # Used for text parsing in improved handler
uuid = { version = "1", features = ["v4","serde"] }
toml = "0.9"
base64 = "0.22"
url = { version = "2.4", features = ["serde"] }

bon = "3"
schemars = { version = "1.0",  features = ["chrono04"] }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3