[workspace]
resolver = "3"

# Used while refactoring to add agent_protocol_backbone
members = [ "configuration","llm_api",
                "agent_discovery_service","agent_memory_service",
                "agent_evaluation_service",
                "agent_core",
                "basic_agent",
                "mcp_runtime",
                "workflow_management",
#                "workflow_agent",
                "planner_agent",
                "executor_agent",
                "examples/a2a_agent_endpoint","examples/mcp_runtime_endpoint","examples/mcp_server","examples/mcp_client",
                "agent_models",
                "agent_service_adapters",
                "resource_invoker"]

[workspace.dependencies]
configuration = { path = "./configuration" }
agent_core = { path = "./agent_core" }
llm_api = { path = "./llm_api" }
agent_evaluation_service = { path = "./agent_evaluation_service" }
agent_memory_service = { path = "./agent_memory_service" }
agent_discovery_service = { path = "./agent_discovery_service" }

mcp_runtime = { path = "./mcp_runtime" }
workflow_management = { path = "./workflow_management" }

executor_agent = { path = "./executor_agent" }
agent_models = { path = "./agent_models" }
agent_service_adapters = { path = "./agent_service_adapters" }

resource_invoker={ path = "./resource_invoker" }

# For rmcp and a2a-rs, in the future, I have to pin a revision number because this crate is evolving rapidly with significant number of breaking changes
# Update to the latest revision of rmcp on 2025, October the 18th. Pinning specific release of rmcp and a2a-rs ensure stability of swarm
rmcp= { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["client","transport-sse-client", "transport-child-process","reqwest","transport-sse-client-reqwest","auth"] ,rev="11093bc830d77717b8f24813d888238a12d7eefe" }

a2a-rs= { git = "https://github.com/EmilLindfors/a2a-rs.git" , features=["server","http-server","client","http-client","tracing"] , rev="2cf954129de8b4cc3b3146780877e508fa34c00c" }


reqwest = { version = "0.12", features = ["json","rustls-tls"] }
rustls="0.23"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = { version = "0.1"}

serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
anyhow = "1.0"


thiserror = "2"
clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }

axum = "0.8"

jsonwebtoken = { version = "9.3" }
oauth2 = { version = "5" }
openidconnect = { version = "4" }

chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.9"
lazy_static = "1.4"  # Used for static request ID storage in message_handler
regex = "1.10"  # Used for text parsing in improved handler
uuid = { version = "1", features = ["v4","serde"] }
toml = "0.9"
base64 = "0.22"
url = { version = "2.4", features = ["serde"] }

bon = "3"
schemars = { version = "1.0",  features = ["chrono04"] }

redb="3.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
