[workspace]
resolver = "3"

# Used while refactoring to add agent_protocol_backbone
members = [ 
                "agent_factory",
                "basic_agent",
                "mcp_runtime",
                "workflow_management",
                "planner_agent",
                "executor_agent",
                "examples/a2a_agent_endpoint","examples/mcp_runtime_endpoint","examples/mcp_server","examples/mcp_client",
                "resource_invoker"]

[workspace.dependencies]
basic_agent = { path = "./basic_agent" }
mcp_runtime = { path = "./mcp_runtime" }
workflow_management = { path = "./workflow_management" }
planner_agent = { path = "./planner_agent" }
executor_agent = { path = "./executor_agent" }

resource_invoker={ path = "./resource_invoker" }

# Moved to swarm_commons
agent_core={ git = "https://github.com/fcn06/swarm_commons.git" }
configuration={ git = "https://github.com/fcn06/swarm_commons.git" }
llm_api={ git = "https://github.com/fcn06/swarm_commons.git" }
agent_models = {  git = "https://github.com/fcn06/swarm_commons.git" }

# Moved to swarm_services
agent_service_adapters = { git = "https://github.com/fcn06/swarm_services.git" }


# For rmcp and a2a-rs, in the future, I have to pin a revision number because this crate is evolving rapidly with significant number of breaking changes
# Update to the latest revision of rmcp on 2025, October the 18th. Pinning specific release of rmcp and a2a-rs ensure stability of swarm
#rmcp= { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["client","transport-sse-client", "transport-child-process","reqwest","transport-sse-client-reqwest","auth"] ,rev="11093bc830d77717b8f24813d888238a12d7eefe" }
#a2a-rs= { git = "https://github.com/EmilLindfors/a2a-rs.git" , features=["server","http-server","client","http-client","tracing"] , rev="2cf954129de8b4cc3b3146780877e508fa34c00c" }

rmcp= { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["client","transport-sse-client", "transport-child-process","reqwest","transport-sse-client-reqwest","auth"] ,rev="94428d543f9b97ff2d208800454131a8dc5ce1ea" }

#a2a-rs= { git = "https://github.com/EmilLindfors/a2a-rs.git" , features=["server","http-server","client","http-client","tracing","ws-server"] , rev="b2d8dbf9ef0c4e5a317b63e1bbb2e092d61c0e04" }
# https://github.com/EmilLindfors/a2a-rs/blob/b2d8dbf9ef0c4e5a317b63e1bbb2e092d61c0e04/a2a-rs/src/adapter/storage/task_storage.rs#L28
a2a-rs= { git = "https://github.com/EmilLindfors/a2a-rs.git" , features=["server","http-server","client","http-client"] , default-features = false , rev="b2d8dbf9ef0c4e5a317b63e1bbb2e092d61c0e04" }




reqwest = { version = "0.12", features = ["json","rustls-tls"] }
rustls="0.23"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = { version = "0.1"}

serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
anyhow = "1.0"


thiserror = "2"
clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }

axum = "0.8"

jsonwebtoken = { version = "10" }
oauth2 = { version = "5" }
openidconnect = { version = "4" }

chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.9"
lazy_static = "1.4"  # Used for static request ID storage in message_handler
regex = "1.10"  # Used for text parsing in improved handler
uuid = { version = "1", features = ["v4","serde"] }
toml = "0.9"
base64 = "0.22"
url = { version = "2.4", features = ["serde"] }

bon = "3"
schemars = { version = "1.0",  features = ["chrono04"] }

redb="3.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
