[package]
name = "a2a_full_backbone"
version = "0.1.0"
edition = "2024"

[dependencies]
llm_api = { workspace = true }
configuration = { workspace = true }
a2a_agent_backbone = { workspace = true }
mcp_agent_backbone={ workspace = true }

rmcp={ workspace = true }
a2a-rs= { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }


anyhow = { workspace = true }
reqwest = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }

base64= { workspace = true }
url = { workspace = true }

# Async foundation - optional
async-trait = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
axum = { workspace = true } # Added axum dependency

# Logging - optional
tracing = { workspace = true}
tracing-subscriber = { workspace = true }


[[bin]]
name = "full_agent_server"
path = "bin/a2a_full_server.rs"
