[package]
name = "agent_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
llm_api = { workspace = true }
configuration = { workspace = true }

agent_evaluation_service = { workspace = true }
agent_memory_service = { workspace = true }

a2a-rs= { workspace = true }

agent_discovery_service = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
chrono={ workspace = true }


toml = { workspace = true }

thiserror = { workspace = true }