[package]
name = "agent_evaluation_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
a2a-rs= { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap={ workspace = true }
reqwest={ workspace = true, features = ["json"] }
dashmap = { version = "6", features = ["serde"] }
dotenv = "0.15.0"
llm_api = { path = "../llm_api" }

[[bin]]
name = "evaluation_service"
path = "bin/launch_evaluation_service.rs"