[package]
name = "agent_workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.81"
regex = "1.10.4" # For interpolation

# Internal dependencies
agent_core = { path = "../agent_core" }
llm_api = { path = "../llm_api" }
mcp_runtime = { path = "../mcp_runtime" }
workflow_management = { path = "../workflow_management" }

[build-dependencies]
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }

[[bin]]
name = "launch_agent_workflow"
path = "src/bin/launch_agent_workflow.rs"
