[package]
name = "bidirectional_agent_backbone"
version = "0.1.0"
edition = "2021"

[dependencies]
a2a-rs= { workspace = true }
rmcp = { workspace = true }

# Internal crates
mcp_agent_backbone = { workspace = true }
configuration = { workspace = true }
llm_api ={ workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { workspace = true }


# Logging - optional
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
url = "2.4.1"
reqwest = { workspace = true }
chrono = { workspace = true }


