[package]
name = "configuration"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]


[dependencies]
reqwest = { workspace = true }
#serde = { version = "1.0", features = ["derive"] } # Ensure derive feature is enabled
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

toml = { workspace = true }
log = { workspace = true }
a2a-rs={ workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }


