[package]
name = "configuration"
version = "0.1.0"
edition = "2024"

[lib]
#crate-type = ["dylib", "rlib"]
crate-type = ["rlib"]

[dependencies]
#reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

toml = { workspace = true }




