[package]
name = "mcp_agent_backbone"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
llm_api = { workspace = true }
configuration = { workspace = true }
rmcp = { workspace = true }

rustls = { workspace = true }

tower = { workspace = true }
toml = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
rand = { version = "0.9", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.14" }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1" }
hyper-util = { version = "0", features = ["server"] }