[package]
name = "mcp_agent_backbone"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
llm_api = { workspace = true }
configuration = { workspace = true }
rmcp = { workspace = true }

rustls = { workspace = true }


toml = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }

rand = { workspace = true }
axum = { workspace = true }
schemars = { version = "1", optional = true }
reqwest = { workspace = true }
uuid={ workspace = true }
chrono = { workspace = true }


