[package]
name = "mcp_agent_endpoint"
version = "0.1.0"
edition = "2024"

[dependencies]
llm_api = { workspace = true }
mcp_agent_backbone = { workspace = true }
configuration = { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

toml = { workspace = true }
clap = { workspace = true }