[package]
name = "mcp_runtime"
version = "0.1.0"
edition = "2024"

[lib]
# I had issues during direct compilation. The below does not work
# serde and anyhow are rlib ( static library) and not dylib 
#crate-type = ["dylib", "rlib"]
# This works...
crate-type = ["rlib"]

[dependencies]
llm_api = { workspace = true }
configuration = { workspace = true }

rmcp = { workspace = true }

schemars = { workspace = true }
reqwest = { workspace = true }

rustls = { workspace = true }

toml = { workspace = true }

tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

futures = { workspace = true }

rand = { workspace = true }
axum = { workspace = true }

uuid={ workspace = true }
chrono = { workspace = true }
