[package]
name = "orchestration_agent"
version = "0.1.0"
edition = "2024"



[dependencies]
configuration = { workspace = true }
llm_api = { workspace = true }
agent_core = { workspace = true }

mcp_runtime={ workspace = true }

agent_evaluation_service = { workspace = true }
agent_memory_service = { workspace = true }
agent_discovery_service={ workspace = true }

a2a-rs= { workspace = true }
rmcp= { workspace = true }

anyhow={ workspace = true }
clap = { workspace = true }
toml = { workspace = true }

# Required dependencies
lazy_static={ workspace = true }
regex={ workspace = true }

# Optional AI integration (for future use)
# HTTP client - optional
#reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }
reqwest={ workspace = true, optional = true }
rustls = { workspace = true }


# Core dependencies
serde={ workspace = true }
serde_json={ workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 =  { workspace = true }

thiserror = { workspace = true }

url = { workspace = true }
bon = { workspace = true }


# Async foundation - optional
tokio={ workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }


# HTTP server - optional
axum = { workspace = true, optional = true }

# Authentication - optional
jsonwebtoken = { workspace = true,optional=true}
oauth2 = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }

# Logging - optional
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }


[features]

default = ["server", "tracing","dep:reqwest"]
client = ["dep:tokio", "dep:async-trait", "dep:futures"]
http-client = ["client", "dep:reqwest"]
server = ["dep:tokio", "dep:async-trait", "dep:futures"]
http-server = ["server", "dep:axum"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
auth = ["dep:jsonwebtoken", "dep:oauth2", "dep:openidconnect", "dep:reqwest"]
full = ["http-client",  "http-server", "tracing", "auth"]

[[bin]]
name = "orchestration_agent_launch"
path = "bin/orchestration_agent_launch.rs"