[package]
name = "planner_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
agent_models={workspace=true}
agent_service_adapters={workspace=true}
configuration = { workspace = true }
llm_api = { workspace = true }
agent_core = { workspace = true }
mcp_runtime={ workspace = true }
workflow_management = { workspace = true }

# Network dependencies
tokio= { workspace = true }
async-trait = { workspace = true }
reqwest={ workspace = true }
rustls = { workspace = true }

# Protocol dependencies
a2a-rs= { workspace = true }
rmcp= { workspace = true }

# General dependencies
serde={ workspace = true }
serde_json={ workspace = true }
anyhow = { workspace = true }
toml={ workspace = true }
clap = { workspace = true }
regex = "1.11" # For interpolation
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "launch_planner_agent"
path = "bin/launch_planner_agent.rs"