[package]
name = "resource_invoker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

a2a-rs = { workspace = true }
rmcp = { workspace = true }

agent_core = { workspace = true }
configuration = { workspace = true }
mcp_runtime = { workspace = true }
workflow_management = { workspace = true }

