[package]
name = "resource_invoker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
agent_core = { workspace = true }
configuration = { workspace = true }
a2a-rs = { workspace = true }
rmcp = { workspace = true }
mcp_runtime = { workspace = true }
workflow_management = { workspace = true }
agent_models = { workspace = true }
llm_api = { workspace = true }
tokio = { workspace = true }