[package]
name = "workflow_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
agent_models = { workspace = true }
agent_service_adapters = { workspace = true }
configuration = { workspace = true }
llm_api = { workspace = true }
agent_core = { workspace = true }
mcp_runtime={ workspace = true }
workflow_management = { workspace = true }

# Network dependencies
tokio= { workspace = true }
async-trait = { workspace = true }
reqwest={ workspace = true }
rustls = { workspace = true }

# Protocol dependencies
a2a-rs= { workspace = true }
rmcp= { workspace = true }

# General dependencies
serde={ workspace = true }
serde_json={ workspace = true }
anyhow = { workspace = true }
toml={ workspace = true }
clap = { workspace = true }
regex = "1.11" # For interpolation
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "launch_agent_workflow"
path = "bin/launch_workflow_agent.rs"

[[bin]]
name = "simple_workflow_agent_client"
path = "bin/simple_workflow_agent_client.rs"