[package]
name = "workflow_management"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_core = { workspace = true }
configuration = { workspace = true }
agent_discovery_service = { workspace = true }

a2a-rs= { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true }
chrono ={ workspace = true }

async-trait = { workspace = true }

anyhow={ workspace = true }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

regex="1"

[[bin]]
name = "workflow_management"
path = "bin/workflow_orchestrator_launch.rs"
