[package]
name = "a2a_agent_endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
llm_api = { workspace = true }
configuration = { workspace = true }
a2a-rs= { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
#tower = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
#tower-http = { workspace = true }
uuid = { workspace = true }

toml = { workspace = true }
clap = { workspace = true }


[[example]]
name = "a2a_agent_endpoint"
path = "src/a2a_agent_endpoint.rs"